--- a/index.html
+++ b/index.html
@@ -10,49 +10,57 @@
     body {
       margin: 0;
       font-family: 'Playfair Display', serif;
-      background-color: #faf6f2;
-      color: #6c3d2f;
+      background-color: #fdf9f6;
+      color: #5e3d2e;
     }
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
+      padding: 1.5rem 2rem;
     }
-    header nav a {
-      margin-left: 1.5rem;
+    nav a {
+      margin-left: 2rem;
       text-decoration: none;
-      color: #6c3d2f;
+      color: #5e3d2e;
+      font-weight: 500;
     }
     .hero {
+      position: relative;
+      background: url('pincelada.png') no-repeat right center;
+      background-size: cover;
+      min-height: 85vh;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
+      padding: 2rem;
       text-align: center;
-      padding: 4rem 2rem;
-      background-color: #faf6f2;
     }
     .hero h1 {
       font-size: 3rem;
-      max-width: 600px;
-      margin: 2rem 0;
-      line-height: 1.2;
+      color: #5e3d2e;
+      max-width: 800px;
+      margin-bottom: 2rem;
     }
-    .hero img {
-      max-height: 500px;
-      width: auto;
-    }
-    .button {
-      background-color: #a86c55;
+    .hero .btn {
+      background-color: #a05a3c;
       color: white;
-      padding: 1rem 2rem;
-      font-size: 1rem;
       border: none;
+      padding: 1rem 2.5rem;
+      font-size: 1.1rem;
       border-radius: 8px;
       cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       text-decoration: none;
-      margin-top: 2rem;
+    }
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+      .hero {
+        background-position: center;
+      }
     }
   </style>
 </head>
@@ -67,10 +75,10 @@
       <a href="#">Subasta</a>
     </nav>
   </header>
-  <main class="hero">
-    <img src="pincelada.png" alt="Pincelada artística" />
+
+  <section class="hero">
     <h1>El arte que cuida la vida</h1>
-    <a href="#" class="button">Explora la galería</a>
-  </main>
+    <a href="#" class="btn">Explora la galería</a>
+  </section>
 </body>
 </html>
