--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       align-items: center;
       padding: 1.5rem 2rem;
     }
+    .brand {
+      font-size: 1.3rem;
+      letter-spacing: 0.25em;
+      text-transform: uppercase;
+      color: #DEA193;
+    }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
@@ -38,10 +44,13 @@
       text-align: center;
     }
     .hero h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
+      font-weight: 400;
+      letter-spacing: 0.02em;
+      line-height: 1.3;
+      max-width: 900px;
+      margin-bottom: 2.5rem;
       color: #5e3d2e;
-      max-width: 800px;
-      margin-bottom: 2rem;
     }
     .hero .btn {
       background-color: #a05a3c;
@@ -56,17 +65,14 @@
     }
     @media (max-width: 768px) {
       .hero h1 {
-        font-size: 2.2rem;
-      }
-      .hero {
-        background-position: center;
+        font-size: 2.3rem;
       }
     }
   </style>
 </head>
 <body>
   <header>
-    <div style="font-weight: bold; font-size: 1.5rem;">TRAZOS QUE SALVAN</div>
+    <div class="brand">TRAZOS QUE SALVAN</div>
     <nav>
       <a href="#">Inicio</a>
       <a href="#">La Iniciativa</a>
