--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <header>
     <div class="brand">TRAZOS QUE SALVAN</div>
     <nav>
-      <a href="#">Inicio</a>
-      <a href="#">La Iniciativa</a>
-      <a href="#">Participa</a>
+      <a href="index.html">Inicio</a>
+      <a href="La Iniciativa.html">La Iniciativa</a>
+      <a href="participa">Participa</a>
       <a href="#">Galería</a>
       <a href="#">Subasta</a>
     </nav>
