--- a/participa.html
+++ b/participa.html
@@ -9,7 +9,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Playfair+Display', serif;
+      font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
       color: #5e3d2e;
     }
@@ -35,10 +35,16 @@
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
+      line-height: 1.8;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 1rem;
+      color: #5e3d2e;
+    }
+    p {
+      font-size: 1.15rem;
+      margin-bottom: 1.5rem;
     }
     form {
       display: flex;
