--- a/participa.html
+++ b/participa.html
@@ -7,6 +7,9 @@
   <title>Participa - Trazos que Salvan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Playfair Display', serif;
@@ -14,28 +17,33 @@
       color: #5e3d2e;
     }
     header {
+      width: 100%;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.5rem 2rem;
+      background-color: #fdf9f6;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
+      font-weight: 700;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
       font-weight: 500;
+      font-size: 1rem;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
+      min-height: 70vh;
     }
     h1 {
       font-size: 2.8rem;
