--- a/participa.html
+++ b/participa.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Participa - Trazos que Salvan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -12,17 +12,15 @@
     }
     body {
       margin: 0;
-      font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
+      font-family: 'Playfair Display', serif;
       color: #5e3d2e;
     }
     header {
-      width: 100%;
-      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fdf9f6;
+      padding: 1.5rem 2rem;
     }
     .brand {
       font-size: 1.3rem;
