--- a/participa.html
+++ b/participa.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Participa - Trazos que Salvan</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -27,7 +27,7 @@
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-      font-weight: 700;
+      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
