--- a/participa.html
+++ b/participa.html
@@ -7,9 +7,6 @@
   <title>Participa - Trazos que Salvan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
       margin: 0;
       background-color: #fdf9f6;
@@ -27,14 +24,13 @@
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
       font-weight: 500;
-      font-size: 1rem;
+      font-size: 500;
     }
     main {
       max-width: 900px;
