--- a/participa.html
+++ b/participa.html
@@ -43,40 +43,14 @@
       font-size: 2.8rem;
       margin-bottom: 1rem;
       color: #5e3d2e;
+    h2 {
+      color: #a05a3c;
+      font-size: 1.4rem;
+      margin-top: 2.5rem;
     }
     p {
       font-size: 1.15rem;
       margin-bottom: 1.5rem;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
-      margin-top: 2rem;
-    }
-    label {
-      font-weight: bold;
-    }
-    input, textarea {
-      font-family: 'Playfair Display', serif;
-      padding: 0.6rem;
-      font-size: 1rem;
-      border: 1px solid #cbb9ac;
-      border-radius: 6px;
-      background-color: #fffdfb;
-    }
-    textarea {
-      resize: vertical;
-    }
-    button {
-      background-color: #a05a3c;
-      color: white;
-      border: none;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      align-self: flex-start;
     }
   </style>
 </head>
