--- a/participa.html
+++ b/participa.html
@@ -7,6 +7,9 @@
   <title>Participa - Trazos que Salvan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       background-color: #fdf9f6;
@@ -24,13 +27,14 @@
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
+      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
       font-weight: 500;
-      font-size: 500;
+      font-size: 1rem;
     }
     main {
       max-width: 900px;
@@ -43,14 +47,40 @@
       font-size: 2.8rem;
       margin-bottom: 1rem;
       color: #5e3d2e;
-    h2 {
-      color: #a05a3c;
-      font-size: 1.4rem;
-      margin-top: 2.5rem;
     }
     p {
       font-size: 1.15rem;
       margin-bottom: 1.5rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.2rem;
+      margin-top: 2rem;
+    }
+    label {
+      font-weight: bold;
+    }
+    input, textarea {
+      font-family: 'Playfair Display', serif;
+      padding: 0.6rem;
+      font-size: 1rem;
+      border: 1px solid #cbb9ac;
+      border-radius: 6px;
+      background-color: #fffdfb;
+    }
+    textarea {
+      resize: vertical;
+    }
+    button {
+      background-color: #a05a3c;
+      color: white;
+      border: none;
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      align-self: flex-start;
     }
   </style>
 </head>
