--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="brand">TRAZOS QUE SALVAN</div>
     <nav>
       <a href="index.html">Inicio</a>
-      <a href="La Iniciativa.html">La Iniciativa</a>
+      <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa">Participa</a>
       <a href="#">Galería</a>
       <a href="#">Subasta</a>
