--- a/participa.html
+++ b/participa.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Participa - Trazos que Salvan</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <style>
     * {
@@ -14,6 +16,7 @@
       margin: 0;
       background-color: #fdf9f6;
       font-family: 'Playfair Display', serif;
+      font-weight: 400;
       color: #5e3d2e;
     }
     header {
@@ -50,6 +53,9 @@
     }
     h1 {
       font-size: 2.8rem;
+      font-weight: 400;
+      letter-spacing: 0;
+      line-height: 1.4;
       margin-bottom: 1rem;
       color: #5e3d2e;
     }
@@ -68,6 +74,7 @@
     }
     input, textarea {
       font-family: 'Playfair Display', serif;
+      font-weight: 400;
       width: 100%;
       padding: 0.6rem;
       font-size: 1rem;
