--- a/participa.html
+++ b/participa.html
@@ -7,7 +7,7 @@
   <title>Participa - Trazos que Salvan</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -15,7 +15,7 @@
     body {
       margin: 0;
       background-color: #fdf9f6;
-      font-family: 'Playfair Display', serif;
+      font-family: 'Libre Baskerville', serif;
       font-weight: 400;
       color: #5e3d2e;
     }
@@ -52,6 +52,7 @@
       min-height: 70vh;
     }
     h1 {
+      font-family: 'Libre Baskerville', serif;
       font-size: 2.8rem;
       font-weight: 400;
       letter-spacing: 0;
@@ -73,7 +74,7 @@
       font-weight: bold;
     }
     input, textarea {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Libre Baskerville', serif;
       font-weight: 400;
       width: 100%;
       padding: 0.6rem;
