--- a/iniciativa.html
+++ b/iniciativa.html
@@ -5,47 +5,63 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>La Iniciativa - Trazos que Salvan</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      font-family: 'Playfair Display', serif;
+      font-family: 'Libre Baskerville', serif;
+      font-weight: 400;
       background-color: #fdf9f6;
       color: #5e3d2e;
     }
     header {
+      width: 100%;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.5rem 2rem;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
+      font-weight: 400;
+    }
+    nav {
+      display: flex;
+      gap: 2rem;
     }
     nav a {
-      margin-left: 2rem;
       text-decoration: none;
-      color: #5e3d2e;
+      font-size: 1rem;
       font-weight: 500;
+      color: #5e3d2e;
+      white-space: nowrap;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
+      min-height: 70vh;
     }
     h1 {
       font-size: 2.8rem;
+      font-weight: 400;
+      letter-spacing: 0;
+      line-height: 1.4;
       margin-bottom: 1rem;
-      color: #5e3d2e;
     }
     h2 {
-      color: #a05a3c;
-      font-size: 1.4rem;
-      margin-top: 2.5rem;
+      font-size: 1.5rem;
+      margin-top: 2rem;
+      font-weight: 700;
     }
     p {
       font-size: 1.15rem;
@@ -79,8 +95,6 @@
     <p>Una obra original, una ilustración impresa (numerada y firmada), una fotografía, una pieza en cerámica, técnica mixta o incluso arte digital impreso.</p>
 
     <p>Tu obra contará con el reconocimiento debido: nombre del artista, enlace a redes sociales y código QR de contacto estarán presentes durante la exposición y subasta.</p>
-
-    <p><strong>Tema:</strong> Libre — siempre que refleje una sensibilidad hacia la vida, la libertad, el vínculo o la dignidad animal.</p>
   </main>
 </body>
 </html>
