--- a/iniciativa.html
+++ b/iniciativa.html
@@ -25,6 +25,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #fdf9f6;
     }
     .brand {
       font-size: 1.3rem;
@@ -51,18 +52,6 @@
       line-height: 1.8;
       min-height: 70vh;
     }
-    h1 {
-      font-size: 2.8rem;
-      font-weight: 400;
-      letter-spacing: 0;
-      line-height: 1.4;
-      margin-bottom: 1rem;
-    }
-    h2 {
-      font-size: 1.5rem;
-      margin-top: 2rem;
-      font-weight: 700;
-    }
     p {
       font-size: 1.15rem;
       margin-bottom: 1.5rem;
@@ -82,7 +71,6 @@
   </header>
 
   <main>
-    <h1>La Iniciativa</h1>
     <p><strong>Trazos que Salvan</strong> es una iniciativa que une sensibilidad artística y compasión por la vida no humana.</p>
 
     <p>Invitamos a artistas, ilustradores, fotógrafos y creadores visuales a ser parte de esta propuesta que busca transformar el arte en una herramienta de cuidado, acción y cambio. Cada obra es un acto simbólico de afecto y solidaridad.</p>
@@ -91,8 +79,7 @@
 
     <p>Esta red solidaria no tiene fronteras de técnica ni estilo. Lo importante es el gesto: ofrecer una creación como símbolo de respeto, protección y esperanza.</p>
 
-    <h2>¿Qué puedes donar?</h2>
-    <p>Una obra original, una ilustración impresa (numerada y firmada), una fotografía, una pieza en cerámica, técnica mixta o incluso arte digital impreso.</p>
+    <p><strong>¿Qué puedes donar?</strong> Una obra original, una ilustración impresa (numerada y firmada), una fotografía, una pieza en cerámica, técnica mixta o incluso arte digital impreso.</p>
 
     <p>Tu obra contará con el reconocimiento debido: nombre del artista, enlace a redes sociales y código QR de contacto estarán presentes durante la exposición y subasta.</p>
   </main>
