--- a/participa.html
+++ b/participa.html
@@ -25,6 +25,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #fdf9f6;
     }
     .brand {
       font-size: 1.3rem;
@@ -50,15 +51,6 @@
       padding: 0 2rem;
       line-height: 1.8;
       min-height: 70vh;
-    }
-    h1 {
-      font-family: 'Libre Baskerville', serif;
-      font-size: 2.8rem;
-      font-weight: 400;
-      letter-spacing: 0;
-      line-height: 1.4;
-      margin-bottom: 1rem;
-      color: #5e3d2e;
     }
     p {
       font-size: 1.15rem;
@@ -111,7 +103,6 @@
   </header>
 
   <main>
-    <h1>Participa</h1>
     <p>¿Eres artista y deseas unirte a esta causa compasiva? Completa el formulario con los datos de tu obra y súmate a la subasta solidaria de <strong>Trazos que Salvan</strong>.</p>
     <p><strong>Fecha límite de inscripción:</strong> 15 de mayo de 2025</p>
 
