--- a/iniciativa.html
+++ b/iniciativa.html
@@ -14,36 +14,31 @@
     }
     body {
       margin: 0;
-      font-family: 'Libre Baskerville', serif;
-      font-weight: 400;
+      font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
       color: #5e3d2e;
     }
-    header {
-      width: 100%;
-      padding: 1.5rem 2rem;
+     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fdf9f6;
+      padding: 1.5rem 2rem;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-      font-weight: 400;
     }
     nav {
       display: flex;
       gap: 2rem;
     }
     nav a {
+      margin-left: 2rem;
       text-decoration: none;
-      font-size: 1rem;
-      font-weight: 500;
       color: #5e3d2e;
-      white-space: nowrap;
+      font-weight: 500;
     }
     main {
       max-width: 900px;
