--- a/iniciativa.html
+++ b/iniciativa.html
@@ -14,38 +14,36 @@
     }
     body {
       margin: 0;
-      font-family: 'Playfair Display', serif;
+      font-family: 'Libre Baskerville', serif;
       background-color: #fdf9f6;
       color: #5e3d2e;
     }
-     header {
+    header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1.5rem 2rem;
+      background-color: transparent;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-    }
-    nav {
-      display: flex;
-      gap: 2rem;
+      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
       font-weight: 500;
+      font-size: 1rem;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
-      min-height: 70vh;
     }
     p {
       font-size: 1.15rem;
