--- a/participa.html
+++ b/participa.html
@@ -14,18 +14,16 @@
     }
     body {
       margin: 0;
-      background-color: #fdf9f6;
       font-family: 'Libre Baskerville', serif;
-      font-weight: 400;
+      background-color: #fdf9f6;
       color: #5e3d2e;
     }
     header {
-      width: 100%;
-      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fdf9f6;
+      padding: 1.5rem 2rem;
+      background-color: transparent;
     }
     .brand {
       font-size: 1.3rem;
@@ -34,23 +32,18 @@
       color: #DEA193;
       font-weight: 400;
     }
-    nav {
-      display: flex;
-      gap: 2rem;
-    }
     nav a {
+      margin-left: 2rem;
       text-decoration: none;
-      font-size: 1rem;
-      font-weight: 500;
       color: #5e3d2e;
-      white-space: nowrap;
+      font-weight: 500;
+      font-size: 1rem;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
-      min-height: 70vh;
     }
     p {
       font-size: 1.15rem;
@@ -67,8 +60,6 @@
     }
     input, textarea {
       font-family: 'Libre Baskerville', serif;
-      font-weight: 400;
-      width: 100%;
       padding: 0.6rem;
       font-size: 1rem;
       border: 1px solid #cbb9ac;
