--- a/participa.html
+++ b/participa.html
@@ -2,28 +2,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Participa - Trazos que Salvan</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
     }
     body {
       margin: 0;
-      font-family: 'Libre Baskerville', serif;
       background-color: #fdf9f6;
+      font-family: 'Playfair Display', serif;
       color: #5e3d2e;
     }
     header {
+      width: 100%;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.5rem 2rem;
-      background-color: transparent;
     }
     .brand {
       font-size: 1.3rem;
@@ -32,18 +30,28 @@
       color: #DEA193;
       font-weight: 400;
     }
+    nav {
+      display: flex;
+      gap: 2rem;
+    }
     nav a {
-      margin-left: 2rem;
       text-decoration: none;
-      color: #5e3d2e;
-      font-weight: 500;
       font-size: 1rem;
+      font-weight: 500;
+      color: #5e3d2e;
+      white-space: nowrap;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
+      min-height: 70vh;
+    }
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 1rem;
+      color: #5e3d2e;
     }
     p {
       font-size: 1.15rem;
@@ -59,7 +67,8 @@
       font-weight: bold;
     }
     input, textarea {
-      font-family: 'Libre Baskerville', serif;
+      font-family: 'Playfair Display', serif;
+      width: 100%;
       padding: 0.6rem;
       font-size: 1rem;
       border: 1px solid #cbb9ac;
@@ -94,6 +103,7 @@
   </header>
 
   <main>
+    <h1>Participa</h1>
     <p>¿Eres artista y deseas unirte a esta causa compasiva? Completa el formulario con los datos de tu obra y súmate a la subasta solidaria de <strong>Trazos que Salvan</strong>.</p>
     <p><strong>Fecha límite de inscripción:</strong> 15 de mayo de 2025</p>
 
