--- a/iniciativa.html
+++ b/iniciativa.html
@@ -5,16 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>La Iniciativa - Trazos que Salvan</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
       margin: 0;
-      font-family: 'Libre Baskerville', serif;
+      font-family: 'Playfair Display', serif;
       background-color: #fdf9f6;
       color: #5e3d2e;
     }
@@ -23,27 +18,34 @@
       justify-content: space-between;
       align-items: center;
       padding: 1.5rem 2rem;
-      background-color: transparent;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
       font-weight: 500;
-      font-size: 1rem;
     }
     main {
       max-width: 900px;
       margin: 3rem auto;
       padding: 0 2rem;
       line-height: 1.8;
+    }
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 1rem;
+      color: #5e3d2e;
+    }
+    h2 {
+      color: #a05a3c;
+      font-size: 1.4rem;
+      margin-top: 2.5rem;
     }
     p {
       font-size: 1.15rem;
@@ -72,9 +74,12 @@
 
     <p>Esta red solidaria no tiene fronteras de técnica ni estilo. Lo importante es el gesto: ofrecer una creación como símbolo de respeto, protección y esperanza.</p>
 
-    <p><strong>¿Qué puedes donar?</strong> Una obra original, una ilustración impresa (numerada y firmada), una fotografía, una pieza en cerámica, técnica mixta o incluso arte digital impreso.</p>
+    <h2>¿Qué puedes donar?</h2>
+    <p>Una obra original, una ilustración impresa (numerada y firmada), una fotografía, una pieza en cerámica, técnica mixta o incluso arte digital impreso.</p>
 
     <p>Tu obra contará con el reconocimiento debido: nombre del artista, enlace a redes sociales y código QR de contacto estarán presentes durante la exposición y subasta.</p>
+
+    <p><strong>Tema:</strong> Libre — siempre que refleje una sensibilidad hacia la vida, la libertad, el vínculo o la dignidad animal.</p>
   </main>
 </body>
 </html>
