--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <a href="index.html">Inicio</a>
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa">Participa</a>
-      <a href="#">Galería</a>
-      <a href="#">Subasta</a>
+      <a href="galeria">Galería</a>
+      <a href="subasta">Subasta</a>
     </nav>
   </header>
 
