--- a/galeria.html
+++ b/galeria.html
@@ -5,13 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Galería - Trazos que Salvan</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Playfair Display', serif;
@@ -23,21 +19,19 @@
       justify-content: space-between;
       align-items: center;
       padding: 1.5rem 2rem;
-      background-color: transparent;
     }
     .brand {
       font-size: 1.3rem;
       letter-spacing: 0.25em;
       text-transform: uppercase;
       color: #DEA193;
-      font-weight: 400;
     }
     nav a {
       margin-left: 2rem;
       text-decoration: none;
       color: #5e3d2e;
-      font-weight: 500;
       font-size: 1rem;
+      font-weight: 500;
     }
     main {
       max-width: 1200px;
@@ -90,91 +84,19 @@
       <a href="#">Subasta</a>
     </nav>
   </header>
-
   <main>
     <p>Explora una selección de obras donadas por artistas solidarios: ilustraciones, cerámicas, arte digital y más. Cada pieza representa un gesto de amor hacia los animales.</p>
-
     <div class="gallery">
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?painting,art" alt="Obra original">
-        <div class="artwork-info">
-          <h3>“Luz Interior”</h3>
-          <p>Artista: Clara Mejía</p>
-          <p>Técnica: Óleo sobre lienzo</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?illustration,drawing" alt="Ilustración">
-        <div class="artwork-info">
-          <h3>“Dibujo del Alma”</h3>
-          <p>Artista: Alejandro Ruiz</p>
-          <p>Técnica: Ilustración firmada</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?photography,animal" alt="Fotografía">
-        <div class="artwork-info">
-          <h3>“Mirada Silvestre”</h3>
-          <p>Artista: Paula Gutiérrez</p>
-          <p>Técnica: Fotografía en blanco y negro</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?ceramic,handmade" alt="Cerámica">
-        <div class="artwork-info">
-          <h3>“Raíces”</h3>
-          <p>Artista: Jorge Arango</p>
-          <p>Técnica: Cerámica esgrafiada</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?mixedmedia,art" alt="Mixta">
-        <div class="artwork-info">
-          <h3>“Fragmentos de Esperanza”</h3>
-          <p>Artista: Camila Vélez</p>
-          <p>Técnica: Técnica mixta sobre madera</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?digitalart,colors" alt="Arte digital">
-        <div class="artwork-info">
-          <h3>“Luz Artificial”</h3>
-          <p>Artista: Juan Esteban López</p>
-          <p>Técnica: Arte digital impreso</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?cat,painting" alt="Pintura gato">
-        <div class="artwork-info">
-          <h3>“Misterio Felino”</h3>
-          <p>Artista: Diana Castro</p>
-          <p>Técnica: Acuarela</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?art,abstract" alt="Obra abstracta">
-        <div class="artwork-info">
-          <h3>“Vínculo”</h3>
-          <p>Artista: Ana Rojas</p>
-          <p>Técnica: Acrílico sobre lienzo</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?sculpture,clay" alt="Escultura en barro">
-        <div class="artwork-info">
-          <h3>“Nacimiento”</h3>
-          <p>Artista: Samuel Ortega</p>
-          <p>Técnica: Barro modelado</p>
-        </div>
-      </div>
-      <div class="artwork">
-        <img src="https://source.unsplash.com/600x400/?portrait,illustration" alt="Ilustración retrato">
-        <div class="artwork-info">
-          <h3>“Retrato de Aurora”</h3>
-          <p>Artista: Elisa Márquez</p>
-          <p>Técnica: Lápices de color</p>
-        </div>
-      </div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1549893074-4bc4024e12b4" alt="Obra 1"><div class="artwork-info"><h3>“Luz Interior”</h3><p>Artista: Clara Mejía</p><p>Técnica: Óleo sobre lienzo</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1522163182402-834f871fd851" alt="Obra 2"><div class="artwork-info"><h3>“Dibujo del Alma”</h3><p>Artista: Alejandro Ruiz</p><p>Técnica: Ilustración firmada</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1555685812-4b943f1cb0eb" alt="Obra 3"><div class="artwork-info"><h3>“Mirada Silvestre”</h3><p>Artista: Paula Gutiérrez</p><p>Técnica: Fotografía</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1560881280-6810b5a4c99f" alt="Obra 4"><div class="artwork-info"><h3>“Raíces”</h3><p>Artista: Jorge Arango</p><p>Técnica: Cerámica esgrafiada</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1620666413562-e0a6baaa229f" alt="Obra 5"><div class="artwork-info"><h3>“Fragmentos de Esperanza”</h3><p>Artista: Camila Vélez</p><p>Técnica: Técnica mixta</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1586717096739-95d8c79d2673" alt="Obra 6"><div class="artwork-info"><h3>“Luz Artificial”</h3><p>Artista: Juan Esteban López</p><p>Técnica: Arte digital</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1586282022611-d6b43f7fa0aa" alt="Obra 7"><div class="artwork-info"><h3>“Misterio Felino”</h3><p>Artista: Diana Castro</p><p>Técnica: Acuarela</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1617849841039-fcc55b9e7d25" alt="Obra 8"><div class="artwork-info"><h3>“Vínculo”</h3><p>Artista: Ana Rojas</p><p>Técnica: Acrílico</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1595191241944-62ba30b0fccc" alt="Obra 9"><div class="artwork-info"><h3>“Nacimiento”</h3><p>Artista: Samuel Ortega</p><p>Técnica: Barro modelado</p></div></div>
+      <div class="artwork"><img src="https://images.unsplash.com/photo-1558981359-89a648b5c2f4" alt="Obra 10"><div class="artwork-info"><h3>“Retrato de Aurora”</h3><p>Artista: Elisa Márquez</p><p>Técnica: Lápices de color</p></div></div>
     </div>
   </main>
 </body>
