--- a/participa.html
+++ b/participa.html
@@ -97,8 +97,8 @@
       <a href="index.html">Inicio</a>
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
-      <a href="#">Galería</a>
-      <a href="#">Subasta</a>
+      <a href="galeria.html">Galería</a>
+      <a href="subasta.html">Subasta</a>
     </nav>
   </header>
 
