--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <section class="hero">
     <h1>El arte que cuida la vida</h1>
-    <a href="#" class="btn">Explora la galería</a>
+    <a href="galeria.html" class="btn">Explora la galería</a>
   </section>
 </body>
 </html>
