--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
       <a href="galeria.html">Galería</a>
-      <a href="#">Subasta</a>
+      <a href="subasta.html">Subasta</a>
     </nav>
   </header>
   <main>
