--- a/subasta.html
+++ b/subasta.html
@@ -45,6 +45,7 @@
     p {
       font-size: 1.15rem;
       margin-bottom: 1.5rem;
+      line-height: 1.8;
     }
     .boton {
       display: inline-block;
