--- a/participa.html
+++ b/participa.html
@@ -56,6 +56,7 @@
     p {
       font-size: 1.15rem;
       margin-bottom: 1.5rem;
+      line-height: 1.8;
     }
     form {
       display: flex;
@@ -97,12 +98,13 @@
       <a href="index.html">Inicio</a>
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
-      <a href="galeria.html">Galería</a>
-      <a href="subasta.html">Subasta</a>
+      <a href="#">Galería</a>
+      <a href="#">Subasta</a>
     </nav>
   </header>
 
   <main>
+    <h1>Participa</h1>
     <p>¿Eres artista y deseas unirte a esta causa compasiva? Completa el formulario con los datos de tu obra y súmate a la subasta solidaria de <strong>Trazos que Salvan</strong>.</p>
     <p><strong>Fecha límite de inscripción:</strong> 15 de mayo de 2025</p>
 
