--- a/galeria.html
+++ b/galeria.html
@@ -118,6 +118,7 @@
           <h3>“Obra Solidaria 2”</h3>
           <p>Artista: Nombre 2</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/qkhhPb7JGZtS1QrL8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -126,6 +127,7 @@
           <h3>“Obra Solidaria 3”</h3>
           <p>Artista: Nombre 3</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/k1JiFaTmgFgnSoSMA" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -134,6 +136,7 @@
           <h3>“Obra Solidaria 4”</h3>
           <p>Artista: Nombre 4</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/kvy3aqkRdAp1P2wv7" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -142,6 +145,7 @@
           <h3>“Obra Solidaria 5”</h3>
           <p>Artista: Nombre 5</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/6BHTYKjyg2aHt9YM8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -150,6 +154,7 @@
           <h3>“Obra Solidaria 6”</h3>
           <p>Artista: Nombre 6</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/vaQAGBkGKgPg1gBN8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -158,6 +163,7 @@
           <h3>“Obra Solidaria 7”</h3>
           <p>Artista: Nombre 7</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/E1qwrHoUxg1tpoN97" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -166,6 +172,7 @@
           <h3>“Obra Solidaria 8”</h3>
           <p>Artista: Nombre 8</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/gCwJi8UfEJAchXkf8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -174,6 +181,7 @@
           <h3>“Obra Solidaria 9”</h3>
           <p>Artista: Nombre 9</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/y7k2Bah96yX4hDpf8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
@@ -182,6 +190,7 @@
           <h3>“Obra Solidaria 10”</h3>
           <p>Artista: Nombre 10</p>
           <p>Técnica: Técnica diversa</p>
+          <a class="boton" href="https://forms.gle/9mWZ9wYbDFwTLxdD7" target="_blank">Hacer una oferta</a>
         </div>
       </div>
     </div>
