--- a/galeria.html
+++ b/galeria.html
@@ -104,7 +104,7 @@
     <div class="gallery">
 
       <div class="artwork">
-        <img src="img/obra1.jpg" alt="Obra 1">
+        <img src="obra1.jpg" alt="Obra 1">
         <div class="artwork-info">
           <h3>“Obra Solidaria 1”</h3>
           <p>Artista: Nombre 1</p>
