--- a/galeria.html
+++ b/galeria.html
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra2.jpg" alt="Obra 2">
+        <img src="obra2.jpg" alt="Obra 2">
         <div class="artwork-info">
           <h3>“Obra Solidaria 2”</h3>
           <p>Artista: Nombre 2</p>
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra3.jpg" alt="Obra 3">
+        <img src="obra3.jpg" alt="Obra 3">
         <div class="artwork-info">
           <h3>“Obra Solidaria 3”</h3>
           <p>Artista: Nombre 3</p>
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra4.jpg" alt="Obra 4">
+        <img src="obra4.jpg" alt="Obra 4">
         <div class="artwork-info">
           <h3>“Obra Solidaria 4”</h3>
           <p>Artista: Nombre 4</p>
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra5.jpg" alt="Obra 5">
+        <img src="obra5.jpg" alt="Obra 5">
         <div class="artwork-info">
           <h3>“Obra Solidaria 5”</h3>
           <p>Artista: Nombre 5</p>
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra6.jpg" alt="Obra 6">
+        <img src="obra6.jpg" alt="Obra 6">
         <div class="artwork-info">
           <h3>“Obra Solidaria 6”</h3>
           <p>Artista: Nombre 6</p>
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra7.jpg" alt="Obra 7">
+        <img src="obra7.jpg" alt="Obra 7">
         <div class="artwork-info">
           <h3>“Obra Solidaria 7”</h3>
           <p>Artista: Nombre 7</p>
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra8.jpg" alt="Obra 8">
+        <img src="obra8.jpg" alt="Obra 8">
         <div class="artwork-info">
           <h3>“Obra Solidaria 8”</h3>
           <p>Artista: Nombre 8</p>
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra9.jpg" alt="Obra 9">
+        <img src="obra9.jpg" alt="Obra 9">
         <div class="artwork-info">
           <h3>“Obra Solidaria 9”</h3>
           <p>Artista: Nombre 9</p>
@@ -185,7 +185,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="img/obra10.jpg" alt="Obra 10">
+        <img src="obra10.jpg" alt="Obra 10">
         <div class="artwork-info">
           <h3>“Obra Solidaria 10”</h3>
           <p>Artista: Nombre 10</p>
