--- a/galeria.html
+++ b/galeria.html
@@ -72,6 +72,18 @@
       font-size: 0.95rem;
       margin: 0.25rem 0;
     }
+    .oferta {
+      font-weight: bold;
+      color: #884b33;
+      margin: 0.5rem 0 0.2rem;
+    }
+    .sugerido {
+      font-weight: normal;
+      color: #5e3d2e;
+      font-style: italic;
+      font-size: 0.9rem;
+      margin: 0 0 0.5rem;
+    }
     .boton {
       display: inline-block;
       background-color: #a05a3c;
@@ -104,92 +116,112 @@
     <div class="gallery">
 
       <div class="artwork">
-        <img src="obra1.jpg" alt="Obra 1">
+        <img src="img/obra1.jpg" alt="Obra 1">
         <div class="artwork-info">
           <h3>“Obra Solidaria 1”</h3>
           <p>Artista: Nombre 1</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/m5w7FuoLhitkGoeq8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra2.jpg" alt="Obra 2">
+        <img src="img/obra2.jpg" alt="Obra 2">
         <div class="artwork-info">
           <h3>“Obra Solidaria 2”</h3>
           <p>Artista: Nombre 2</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/qkhhPb7JGZtS1QrL8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra3.jpg" alt="Obra 3">
+        <img src="img/obra3.jpg" alt="Obra 3">
         <div class="artwork-info">
           <h3>“Obra Solidaria 3”</h3>
           <p>Artista: Nombre 3</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/k1JiFaTmgFgnSoSMA" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra4.jpg" alt="Obra 4">
+        <img src="img/obra4.jpg" alt="Obra 4">
         <div class="artwork-info">
           <h3>“Obra Solidaria 4”</h3>
           <p>Artista: Nombre 4</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/kvy3aqkRdAp1P2wv7" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra5.jpg" alt="Obra 5">
+        <img src="img/obra5.jpg" alt="Obra 5">
         <div class="artwork-info">
           <h3>“Obra Solidaria 5”</h3>
           <p>Artista: Nombre 5</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/6BHTYKjyg2aHt9YM8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra6.jpg" alt="Obra 6">
+        <img src="img/obra6.jpg" alt="Obra 6">
         <div class="artwork-info">
           <h3>“Obra Solidaria 6”</h3>
           <p>Artista: Nombre 6</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/vaQAGBkGKgPg1gBN8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra7.jpg" alt="Obra 7">
+        <img src="img/obra7.jpg" alt="Obra 7">
         <div class="artwork-info">
           <h3>“Obra Solidaria 7”</h3>
           <p>Artista: Nombre 7</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/E1qwrHoUxg1tpoN97" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra8.jpg" alt="Obra 8">
+        <img src="img/obra8.jpg" alt="Obra 8">
         <div class="artwork-info">
           <h3>“Obra Solidaria 8”</h3>
           <p>Artista: Nombre 8</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/gCwJi8UfEJAchXkf8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra9.jpg" alt="Obra 9">
+        <img src="img/obra9.jpg" alt="Obra 9">
         <div class="artwork-info">
           <h3>“Obra Solidaria 9”</h3>
           <p>Artista: Nombre 9</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/y7k2Bah96yX4hDpf8" target="_blank">Hacer una oferta</a>
         </div>
       </div>
       <div class="artwork">
-        <img src="obra10.jpg" alt="Obra 10">
+        <img src="img/obra10.jpg" alt="Obra 10">
         <div class="artwork-info">
           <h3>“Obra Solidaria 10”</h3>
           <p>Artista: Nombre 10</p>
           <p>Técnica: Técnica diversa</p>
+          <p class="sugerido">Valor base sugerido: $—</p>
+          <p class="oferta">Oferta actual: $—</p>
           <a class="boton" href="https://forms.gle/9mWZ9wYbDFwTLxdD7" target="_blank">Hacer una oferta</a>
         </div>
       </div>
