--- a/index.html
+++ b/index.html
@@ -3,88 +3,23 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trazos que Salvan</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Playfair Display', serif;
-      background-color: #fdf9f6;
-      color: #5e3d2e;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1.5rem 2rem;
-    }
-    .brand {
-      font-size: 1.3rem;
-      letter-spacing: 0.25em;
-      text-transform: uppercase;
-      color: #DEA193;
-    }
-    nav a {
-      margin-left: 2rem;
-      text-decoration: none;
-      color: #5e3d2e;
-      font-weight: 500;
-    }
-    .hero {
-      position: relative;
-      background: url('pincelada.png') no-repeat right center;
-      background-size: cover;
-      min-height: 85vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
-      font-weight: 400;
-      letter-spacing: 0.02em;
-      line-height: 1.3;
-      max-width: 900px;
-      margin-bottom: 2.5rem;
-      color: #5e3d2e;
-    }
-    .hero .btn {
-      background-color: #a05a3c;
-      color: white;
-      border: none;
-      padding: 1rem 2.5rem;
-      font-size: 1.1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      text-decoration: none;
-    }
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2.3rem;
-      }
-    }
-  </style>
+  <title>Inicio - Trazos que Salvan</title>
 </head>
 <body>
   <header>
-    <div class="brand">TRAZOS QUE SALVAN</div>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="iniciativa.html">La Iniciativa</a>
-      <a href="participa">Participa</a>
-      <a href="galeria">Galería</a>
-      <a href="subasta">Subasta</a>
+      <a href="participa.html">Participa</a>
+      <a href="galeria.html">Galería</a>
+      <a href="subasta.html">¿A dónde va tu trazo?</a>
+      <a href="testimonios.html">Vidas que florecen</a>
+      <a href="terminos.html">Términos y condiciones</a>
     </nav>
   </header>
-
-  <section class="hero">
-    <h1>El arte que cuida la vida</h1>
-    <a href="galeria.html" class="btn">Explora la galería</a>
-  </section>
+  <main>
+    <h1>Trazos que Salvan</h1>
+    <p>El arte que cuida la vida</p>
+  </main>
 </body>
 </html>
