--- a/galeria.html
+++ b/galeria.html
@@ -107,7 +107,9 @@
       <a href="iniciativa.html">La Iniciativa</a>
       <a href="participa.html">Participa</a>
       <a href="galeria.html">Galería</a>
-      <a href="subasta.html">Subasta</a>
+      <a href="subasta.html">¿A dónde va tu trazo?</a>
+      <a href="testimonios.html">Vidas que florecen</a>
+      <a href="terminos.html">Términos y condiciones</a>
     </nav>
   </header>
 
